# open-psarc

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  conanfile.txt  main.cpp  psarc_file.cpp  psarc_file.h  psarcfile.cpp  psarcfile.h
.github/workflows/: build.yml
cli/: main.cpp
cmake/: open-psarc-config.cmake.in
include/open-psarc/: psarc_file.h
src/: psarc_file.cpp  sng_parser.cpp  sng_parser.h  sng_types.h  sng_xml_writer.cpp  sng_xml_writer.h
test/: CMakeLists.txt  sng_xml_validation.cpp
test/testdata/expected/: .gitkeep
test/testdata/input/: .gitkeep
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
